完成跨平台项目 CMake 教程

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -2,7 +2,7 @@
 
 #### 教学视频
 
-::: tip 即将到来 ... :tada:
+::: tip 即将到来 ...
 - 【11】CMake：实战篇——常规复杂项目
 - 【11-2】CMake：实战篇——依赖管理
 - 【11-3】CMake：实战篇——交叉编译
@@ -13,9 +13,9 @@
 
 ## 1. 常规非跨平台项目
 
-现计划开发一个专为 Linux 平台设计的视觉处理库 `visionlib` 及示例程序 `vl_demo`，库在从源码编译安装的过程中需要实现以下功能：
-
 ### 1.1 预期目标
+
+现计划开发一个专为 Linux 平台设计的视觉处理库 `visionlib` 及示例程序 `vl_demo`，库在从源码编译安装的过程中需要实现以下功能：
 
 1. 需要支持 C++17 标准；
 2. 强制依赖 OpenCV 4 及以上版本，并用到其中的 `core`、`imgproc`、`highgui` 模块；
@@ -421,7 +421,6 @@ include(FindPackageHandleStandardArgs)
 
 find_package_handle_standard_args(VisionLib
   REQUIRED_VARS VL_INSTALL_PATH
-  VERSION_VAR VisionLib_VERSION
 )
 ```
 
@@ -623,7 +622,7 @@ include(cmake/opcuaInstall.cmake)
 
 find_package(open62541 QUIET)
 if(NOT open62541_FOUND)
-  add_subdirectory(3rdparty/open62541/CMakeLists.txt)
+  add_subdirectory(3rdparty/open62541)
 endif()
 
 aux_source_directory(src target_src)
@@ -821,8 +820,585 @@ cmake --build build
 
 ## 4. 跨平台项目
 
+交叉编译项目虽然涉及到不同的平台，但是只需要一个工具链文件即可，因为大部分交叉编译项目都只涉及 Linux 内核，只不过涉及到不同的 CPU 架构、OS、文件系统，而跨平台项目则需要考虑不同平台的差异，例如 Windows 和 Linux 两个平台的差异就非常大。
+
+跨平台是项目开发的一个重要方向，按照 ISO 标准编写的 C++ 程序跨平台性较好，但是在实际开发中，往往会使用一些平台相关或者是编译器相关的 API，这就导致了跨平台的困难。使用 CMake 完成跨平台项目的开发是一个不错的选择，CMake 提供了很多工具和函数，可以帮助开发者更好的实现跨平台项目。一般来说，跨平台项目的开发需要考虑以下几个方面：
+
+- 编译器的编译选项不同，例如用于控制 C++ 语言标准的选项，在 GCC 中是 `-std=c++<ver>`，在 MSVC 中是 `/std:c++<ver>`；
+
+  ::: important
+  不过在 CMake 中，可以使用 `CMAKE_CXX_STANDARD` 变量来指定 C++ 标准，CMake 会根据不同的编译器自动选择正确的编译选项，这里只是举个例子。
+  :::
+
+- 不同平台的库文件后缀名不同，例如 Windows 下的静态库文件后缀名是 `*.lib`，Linux 下的静态库文件后缀名是 `*.a`，并且库文件的组织方式也不同，Windows 下在链接动态库时需要使用导入库 `*.lib`，Linux 下在链接动态库时则直接使用动态库 `*.so`。
+- 默认安装路径不同，Windows 下的默认安装路径是 `C:\Program Files`，Linux 下的默认安装路径是 `/usr/local`，但 Windows 不建议直接安装到 `C:\Program Files`，而 Linux 则没有过多的限制。
+
 ### 4.1 预期目标
 
-### 4.2 分析
+现计划开发一个跨平台的基础数值算法和最优化库 `numopt`，该库需要支持 Windows 和 Linux 两个平台，`numopt` 项目的开发需要实现以下功能：
 
-### 4.3 实现
+1. 需要支持 C++17 标准；
+2. 默认以静态库的形式构建 `numopt`，但允许用户通过 CMake 选项设置构建为动态库；
+3. 库包含了 `core`、`num` 和 `opt` 3 个模块和 `numopt_version` 1 个可执行文件，其中 `num` 和 `opt` 依赖 `core` 模块，`numopt_version` 依赖 `core` 模块；
+4. `numopt` 项目的默认安装目录如下
+   
+   |      内容      |                Window 安装路径                |        Linux 安装路径        |
+   | :------------: | :-------------------------------------------: | :--------------------------: |
+   |   项目根目录   | `${CMAKE_BINARY_DIR}/install` 记作 `<prefix>` | `/usr/local` 记作 `<prefix>` |
+   |     头文件     |              `<prefix>\include`               |  `<prefix>/include/numopt`   |
+   |   可执行文件   |            `<prefix>\x64\vc16\bin`            |        `<prefix>/bin`        |
+   |   静态库文件   |            `<prefix>\x64\vc16\lib`            |        `<prefix>/lib`        |
+   |   动态库文件   |            `<prefix>\x64\vc16\bin`            |        `<prefix>/lib`        |
+   |   导入库文件   |            `<prefix>\x64\vc16\lib`            |              ——              |
+   | CMake 配置文件 |            `<prefix>\x64\vc16\lib`            | `<prefix>/lib/cmake/numopt`  |
+
+5. 需要提供 `uninstall` 目标，用于卸载已安装的文件，在执行
+
+   ```shell
+   cmake --build . --target uninstall
+   ```
+
+   后，安装目录下的文件都会被删除。
+
+文件结构如下：
+
+``` :collapsed-lines
+.
+├── modules
+│   ├── core
+│   │   ├── include
+│   │   │   └── ...
+│   │   └── src
+│   │       └── ...
+│   ├── num
+│   │   ├── include
+│   │   │   └── ...
+│   │   └── src
+│   │       └── ...
+│   └── opt
+│       ├── include
+│       │   └── ...
+│       └── src
+│           └── ...
+└── samples
+    └── version.cpp
+```
+
+### 4.2 实现
+
+在项目构建部分和[常规非跨平台项目](#_1-常规非跨平台项目)一致，只是在安装部分需要考虑不同平台的差异，因此跨平台项目只是比常规项目多了一些平台相关的配置。
+
+和常规非跨平台项目一样，在项目中添加
+
+- `modules/core/CMakeLists.txt` —— `core` 模块的 CMake 配置文件
+- `modules/num/CMakeLists.txt` —— `num` 模块的 CMake 配置文件
+- `modules/opt/CMakeLists.txt` —— `opt` 模块的 CMake 配置文件
+- `modules/CMakelists.txt` —— 项目的模块列表
+- `samples/CMakeLists.txt` —— 示例程序的 CMake 配置文件
+- `CMakeLists.txt` —— 项目根目录的 CMake 配置文件
+- `cmake/numoptInstall.cmake` —— 项目的安装路径配置文件
+- `cmake/templates/numoptConfig.cmake.in` —— 项目的 CMake 配置文件模板
+- `cmake/templates/cmake_uninstall.cmake.in` —— 项目的卸载配置文件模板
+
+共 7 个文件，如下文件结构所示
+
+``` :collapsed-lines
+.
+├── CMakeLists.txt                   (New)
+├── cmake
+│   ├── numoptInstall.cmake          (New)
+│   └── templates
+│       ├── cmake_uninstall.cmake.in (New)
+│       └── numoptConfig.cmake.in    (New)
+├── modules
+│   ├── core
+│   │   ├── CMakeLists.txt           (New)
+│   │   ├── include
+│   │   │   └── ...
+│   │   └── src
+│   │       └── ...
+│   ├── num
+│   │   ├── CMakeLists.txt           (New)
+│   │   ├── include
+│   │   │   └── ...
+│   │   └── src
+│   │       └── ...
+│   ├── opt
+│   │   ├── CMakeLists.txt           (New)
+│   │   ├── include
+│   │   │   └── ...
+│   │   └── src
+│   │       └── ...
+│   └── CMakeLists.txt               (New)
+└── samples
+    ├── CMakeLists.txt               (New)
+    └── version.cpp
+```
+
+方便起见，就不添加类似于 `vl_add_module` 和 `vl_add_exe` 的宏了。
+
+#### 4.2.1 项目配置
+
+::: code-tabs
+
+@tab CMakeLists.txt
+
+```cmake :collapsed-lines
+# ----------------------------------------------------------------------------
+#   项目配置
+# ----------------------------------------------------------------------------
+cmake_minimum_required(VERSION 3.16)
+
+project(
+  numopt
+  LANGUAGES CXX
+)
+set(CMAKE_CXX_STANDARD 17)
+include(cmake/numoptInstall.cmake)
+
+# ----------------------------------------------------------------------------
+#   目标构建
+# ----------------------------------------------------------------------------
+add_subdirectory(modules)
+add_subdirectory(samples)
+
+# uninstall target
+if(NOT TARGET uninstall)
+  configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/templates/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+    IMMEDIATE @ONLY
+  )
+
+  add_custom_target(uninstall
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
+  )
+endif()
+
+# ----------------------------------------------------------------------------
+#   导出、安装
+# ----------------------------------------------------------------------------
+install(
+  EXPORT numoptTargets
+  DESTINATION ${NUMOPT_CFG_INSTALL_PATH}
+  FILE numoptTargets.cmake
+)
+
+file(RELATIVE_PATH NUMOPT_INSTALL_RELATIVE_PATH 
+  "${CMAKE_INSTALL_PREFIX}/${NUMOPT_CFG_INSTALL_PATH}/" ${CMAKE_INSTALL_PREFIX})
+
+configure_file(
+  cmake/numoptConfig.cmake.in
+  "${CMAKE_CURRENT_BINARY_DIR}/numoptConfig.cmake"
+  @ONLY
+)
+
+install(
+  FILES "${CMAKE_CURRENT_BINARY_DIR}/numoptConfig.cmake"
+  DESTINATION ${NUMOPT_CFG_INSTALL_PATH}
+)
+```
+
+@tab cmake/numoptInstall.cmake
+
+```cmake :collapsed-lines
+# ----------------------------------------------------------
+#  项目安装路径的预先配置
+# ----------------------------------------------------------
+if(NOT CMAKE_TOOLCHAIN_FILE)
+  if(WIN32)
+    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
+  else()
+    set(CMAKE_INSTALL_PREFIX "/usr/local")
+  endif()
+else()
+  # 交叉编译时的安装路径
+  set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
+endif()
+
+# ----------------------------------------------------------
+#  MSVC 安装路径的预先配置
+# ----------------------------------------------------------
+if(MSVC)
+  if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
+    set(ARCH_forMSVC "x64")
+  elseif("${CMAKE_GENERATOR_PLATFORM}" MATCHES "ARM64")
+    set(ARCH_forMSVC "ARM64")
+  elseif("${CMAKE_GENERATOR}" MATCHES "ARM")
+    set(ARCH_forMSVC "ARM")
+  elseif("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
+    set(ARCH_forMSVC "x64")
+  else()
+    set(ARCH_forMSVC x86)
+  endif()
+
+  if(MSVC_VERSION EQUAL 1400)
+    set(RUNTIME_forMSVC vc8)
+  elseif(MSVC_VERSION EQUAL 1500)
+    set(RUNTIME_forMSVC vc9)
+  elseif(MSVC_VERSION EQUAL 1600)
+    set(RUNTIME_forMSVC vc10)
+  elseif(MSVC_VERSION EQUAL 1700)
+    set(RUNTIME_forMSVC vc11)
+  elseif(MSVC_VERSION EQUAL 1800)
+    set(RUNTIME_forMSVC vc12)
+  elseif(MSVC_VERSION EQUAL 1900)
+    set(RUNTIME_forMSVC vc14)
+  elseif(MSVC_VERSION MATCHES "^191[0-9]$")
+    set(RUNTIME_forMSVC vc15)
+  elseif(MSVC_VERSION MATCHES "^192[0-9]$")
+    set(RUNTIME_forMSVC vc16)
+  elseif(MSVC_VERSION MATCHES "^19[34][0-9]$")
+    set(RUNTIME_forMSVC vc17)
+  endif()
+endif()
+
+# ----------------------------------------------------------
+#  安装路径设置
+# ----------------------------------------------------------
+if(MSVC)
+  if(DEFINED ARCH_forMSVC AND DEFINED RUNTIME_forMSVC)
+    set(MSVC_INSTALL_PREFIX "${ARCH_forMSVC}/${RUNTIME_forMSVC}")
+  else()
+    set(MSVC_INSTALL_PREFIX "")
+  endif()
+
+  set(NUMOPT_INC_INSTALL_PATH "include")
+  set(NUMOPT_LIB_INSTALL_PATH "${MSVC_INSTALL_PREFIX}/lib")
+  set(NUMOPT_BIN_INSTALL_PATH "${MSVC_INSTALL_PREFIX}/bin")
+  set(NUMOPT_CFG_INSTALL_PATH "${MSVC_INSTALL_PREFIX}/lib")
+elseif()
+  set(NUMOPT_INC_INSTALL_PATH "include/numopt")
+  set(NUMOPT_LIB_INSTALL_PATH "lib")
+  set(NUMOPT_BIN_INSTALL_PATH "bin")
+  set(NUMOPT_CFG_INSTALL_PATH "lib/cmake/numopt")
+endif()
+```
+
+:::
+
+#### 4.2.2 模块配置
+
+`modules` 目录下的 `CMakeLists.txt` 文件
+
+::: code-tabs
+
+@tab modules
+
+```cmake
+add_subdirectory(core)
+add_subdirectory(num)
+add_subdirectory(opt)
+```
+
+@tab `core` 模块
+
+```cmake :collapsed-lines
+aux_source_directory(src core_src)
+
+if(BUILD_SHARED_LIBS)
+  add_library(core SHARED ${core_src})
+else()
+  add_library(core STATIC ${core_src})
+endif()
+
+target_include_directories(core PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:${NUMOPT_INC_INSTALL_PATH}>
+)
+
+install(TARGETS core
+  LIBRARY DESTINATION ${NUMOPT_BIN_INSTALL_PATH}
+  ARCHIVE DESTINATION ${NUMOPT_LIB_INSTALL_PATH}
+  RUNTIME DESTINATION ${NUMOPT_BIN_INSTALL_PATH}
+  INCLUDES DESTINATION ${NUMOPT_INC_INSTALL_PATH}
+)
+```
+
+@tab `num` 模块
+
+```cmake :collapsed-lines
+aux_source_directory(src num_src)
+
+if(BUILD_SHARED_LIBS)
+  add_library(num SHARED ${num_src})
+else()
+  add_library(num STATIC ${num_src})
+endif()
+
+target_include_directories(num PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:${NUMOPT_INC_INSTALL_PATH}>
+)
+
+target_link_libraries(num PUBLIC core)
+
+install(TARGETS num
+  LIBRARY DESTINATION ${NUMOPT_BIN_INSTALL_PATH}
+  ARCHIVE DESTINATION ${NUMOPT_LIB_INSTALL_PATH}
+  RUNTIME DESTINATION ${NUMOPT_BIN_INSTALL_PATH}
+  INCLUDES DESTINATION ${NUMOPT_INC_INSTALL_PATH}
+)
+```
+
+@tab `opt` 模块
+
+```cmake :collapsed-lines
+aux_source_directory(src opt_src)
+
+if(BUILD_SHARED_LIBS)
+  add_library(opt SHARED ${opt_src})
+else()
+  add_library(opt STATIC ${opt_src})
+endif()
+
+target_include_directories(opt PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:${NUMOPT_INC_INSTALL_PATH}>
+)
+
+target_link_libraries(opt PUBLIC core)
+
+install(TARGETS opt
+  LIBRARY DESTINATION ${NUMOPT_BIN_INSTALL_PATH}
+  ARCHIVE DESTINATION ${NUMOPT_LIB_INSTALL_PATH}
+  RUNTIME DESTINATION ${NUMOPT_BIN_INSTALL_PATH}
+  INCLUDES DESTINATION ${NUMOPT_INC_INSTALL_PATH}
+)
+```
+
+:::
+
+::: tip
+由于没有使用宏，`core` 模块、`num` 模块和 `opt` 模块的配置写了大量的重复代码，可读性降低。因此在必要时候使用宏是一个不错的选择。这里就不再展示宏的使用，读者可以按照[常规非跨平台项目配置](#_1-4-1-项目配置)中的内容自行添加宏。
+:::
+
+#### 4.2.3 示例程序配置
+
+::: code-tabs
+
+@tab samples/CMakeLists.txt
+
+```cmake :collapsed-lines
+add_executable(numopt_version version.cpp)
+
+target_link_libraries(numopt_version PRIVATE core)
+```
+
+:::
+
+#### 4.2.4 CMake 配置文件模板
+
+`cmake_uninstall.cmake.in` 文件参考自[此处](https://gitlab.kitware.com/cmake/community/-/wikis/FAQ#can-i-do-make-uninstall-with-cmake)，用户在实际使用时最好加上出处。
+
+::: code-tabs
+
+@tab numoptConfig.cmake.in
+
+```cmake :collapsed-lines
+# ----------------------------------------------------------------------------
+#  numopt CMake 配置文件
+#
+#                  ** 该文件由 CMake 生成，请勿手动修改 **
+#
+#  基本用法：
+#    find_package(numopt REQUIRED)
+#    target_link_libraries(your_target PRIVATE ${numopt_LIBS})
+# ----------------------------------------------------------------------------
+
+# ----------------------------------------------------------------------------
+#   获取 numopt 安装路径
+# ----------------------------------------------------------------------------
+get_filename_component(NUMOPT_CONFIG_PATH "${CMAKE_CURRENT_LIST_FILE}" PATH)
+get_filename_component(NUMOPT_INSTALL_PATH
+  "${NUMOPT_CONFIG_PATH}/@NUMOPT_INSTALL_RELATIVE_PATH@" REALPATH
+)
+
+# ----------------------------------------------------------------------------
+#   设置头文件搜索路径变量
+# ----------------------------------------------------------------------------
+set(numopt_INCLUDE_DIRS "${NUMOPT_INSTALL_PATH}/@NUMOPT_INC_INSTALL_PATH@")
+
+# ----------------------------------------------------------------------------
+#   设置库文件路径变量
+# ----------------------------------------------------------------------------
+set(numopt_LIBS @NUMOPT_LIB_COMPONENTS@)
+
+if(NOT TARGET core)
+  include("${NUMOPT_CONFIG_PATH}/numoptTargets.cmake")
+endif()
+
+# ----------------------------------------------------------------------------
+#   搜寻的结果、状态
+# ----------------------------------------------------------------------------
+include(FindPackageHandleStandardArgs)
+
+find_package_handle_standard_args(numopt
+  REQUIRED_VARS numopt_INSTALL_PATH
+)
+```
+
+@tab cmake_uninstall.cmake.in
+
+```cmake :collapsed-lines
+# -----------------------------------------------
+# File that provides "make uninstall" target
+# We use the file 'install_manifest.txt'
+#
+# Details:
+# https://gitlab.kitware.com/cmake/community/-/wikis/FAQ#can-i-do-make-uninstall-with-cmake
+# -----------------------------------------------
+
+if(NOT EXISTS "@CMAKE_BINARY_DIR@/install_manifest.txt")
+  message(FATAL_ERROR
+    "Cannot find install manifest: \"@CMAKE_BINARY_DIR@/install_manifest.txt\""
+  )
+endif()
+
+file(READ "@CMAKE_BINARY_DIR@/install_manifest.txt" files)
+string(REGEX REPLACE "\n" ";" files "${files}")
+foreach(file ${files})
+  message(STATUS "Uninstalling: $ENV{DESTDIR}${file}")
+  if(IS_SYMLINK "$ENV{DESTDIR}${file}" OR EXISTS "$ENV{DESTDIR}${file}")
+    execute_process(
+      COMMAND "@CMAKE_COMMAND@" "-E" "remove" "$ENV{DESTDIR}${file}"
+      OUTPUT_VARIABLE rm_out
+      RESULT_VARIABLE rm_retval
+    )
+    if(NOT "${rm_retval}" STREQUAL 0)
+      message(FATAL_ERROR "Problem when removing $ENV{DESTDIR}${file}")
+    endif()
+  else(IS_SYMLINK "$ENV{DESTDIR}${file}" OR EXISTS "$ENV{DESTDIR}${file}")
+    message(STATUS "File $ENV{DESTDIR}${file} does not exist.")
+  endif()
+endforeach()
+```
+
+:::
+
+### 4.3 针对 Visual Studio 的特殊设计
+
+对于多个目标的项目，会生成多个库文件，例如本 `numopt` 项目，在 Windows 下会生成 `core.lib`、`num.lib` 和 `opt.lib` 3 个库文件，在 Visual Studio 中，利用这 3 个库文件进行开发，需要再项目中手动添加，这样会增加开发者的工作量。为了简化开发者的工作，可以将这 3 个库文件打包成一个 `numopt.lib` 文件，这样开发者只需要添加一个库文件即可。
+
+例如 OpenCV 原先会生成 `opencv_core.lib`、`opencv_imgproc.lib` 以及 `opencv_highgui.lib` 等库文件，在启用 `BUILD_opencv_world` 选项后，则不再生成原先的库文件，而是生成一个 `opencv_world.lib` 文件。这时开发者只需在 Visual Studio 项目配置中添加 `opencv_world.lib` 的路径和名字即可。
+
+一个简单的实现方式是在 `core`、`num` 和 `opt` 模块的 `CMakeLists.txt` 文件中添加判断，下面以 `core` 模块为例：
+
+```cmake
+if(NOT BUILD_WORLD)
+  # 原先的配置
+else()
+  aux source_directory(src core_src)
+  set(NUMOPT_SRC "${NUMOPT_SRCS} ${core_src}" CACHE INTERNAL "")
+  set(NUMOPT_INC "${NUMOPT_INC} ${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE INTERNAL "")
+  # 由于没有外部依赖库，所以就不写 NUMOPT_LIB 了
+endif()
+```
+
+修改项目的根目录的 `CMakeLists.txt` 文件
+
+```cmake :collapsed-lines
+# ...
+
+# ----------------------------------------------------------------------------
+#   目标构建
+# ----------------------------------------------------------------------------
+if(BUILD_WORLD)
+  set(NUMOPT_SRC "" CACHE INTERNAL "")
+  set(NUMOPT_INC "" CACHE INTERNAL "")
+  # 由于没有外部依赖库，所以就不写 NUMOPT_LIB 了
+endif()
+
+add_subdirectory(modules)
+add_subdirectory(samples)
+
+if(BUILD_WORLD)
+  if(BUILD_SHARED_LIBS)
+    add_library(numopt SHARED ${NUMOPT_SRC})
+  else()
+    add_library(numopt STATIC ${NUMOPT_SRC})
+  endif()
+  target_include_directories(numopt PUBLIC
+    $<BUILD_INTERFACE:${NUMOPT_INC}>
+    $<INSTALL_INTERFACE:${NUMOPT_INC_INSTALL_PATH}>
+  )
+endif()
+
+# ...
+```
+
+还有一种实现方式是使用[对象库](05.md#_3-1-1-对象库)，将 `core`、`num` 和 `opt` 模块的源文件编译成对象文件，然后再将这些对象文件链接成一个库文件。例如
+
+```cmake
+add_library(core_obj OBJECT ${core_src})
+```
+
+开发者可以自行增加 `if` 判断，根据自己的需求来选择合适的实现方式。
+
+使用形如
+
+::: code-tabs
+
+@tab `core` 模块
+
+```cmake
+add_library(core_obj OBJECT ${core_src})
+
+install(TARGETS core_obj
+  EXPORT numoptModules
+)
+```
+
+@tab `num` 模块
+
+```cmake
+add_library(num_obj OBJECT ${num_src})
+
+install(TARGETS num_obj
+  EXPORT numoptModules
+)
+```
+
+@tab `opt` 模块
+
+```cmake
+add_library(opt_obj OBJECT ${opt_src})
+
+install(TARGETS opt_obj
+  EXPORT numoptModules
+)
+```
+
+:::
+
+来安装对象库等效于安装一个接口库，安装接口库的效果可以参考[【10】项目的导出与安装 - 思考](10.md#思考)中的第 2 个问题，因此在导出配置文件中也具有相应的信息，例如 `numoptTargets.cmake` 导出配置文件中会包含大致如下内容
+
+```cmake
+# Create imported target core_obj
+add_library(core_obj INTERFACE IMPORTED)
+
+# Create imported target num_obj
+add_library(num_obj INTERFACE IMPORTED)
+
+# Create imported target opt_obj
+add_library(opt_obj INTERFACE IMPORTED)
+```
+
+::: warning
+如果希望在 `numoptTargets.cmake` 导出配置文件中只包含一个 `numopt_world` 目标而不包含 `core_obj` 等由对象库导出生成的接口库，可以使用第一种方案。
+:::
+
+## 写在后面
+
+::: tip
+
+有关 CMake 项目实战的内容可以参考 [RMVL](https://github.com/cv-rmvl/rmvl.git) 项目的 CMake 框架，本文涉及到的
+
+- 常规非跨平复杂项目
+- 外部依赖
+- 交叉编译
+- 跨平台
+
+对应的 CMake 配置，都能在 RMVL 项目中找到。
+
+:::
