--- a/docs/tutorial/cmake/03.md
+++ b/docs/tutorial/cmake/03.md
@@ -2,8 +2,12 @@
 
 #### 教学视频
 
+<CardGrid>
+
 @[bilibili](BV1E6421g71z)
 @[bilibili](BV1px4y1D7d2)
+
+</CardGrid>
 
 ::: tip
 如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
