--- a/docs/tutorial/cmake/05.md
+++ b/docs/tutorial/cmake/05.md
@@ -2,8 +2,12 @@
 
 #### 教学视频
 
+<CardGrid>
+
 @[bilibili](BV13C411W7m2)
 @[bilibili](BV1ii421R74D)
+
+</CardGrid>
 
 ::: tip
 如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
