--- a/docs/tutorial/cmake/02.md
+++ b/docs/tutorial/cmake/02.md
@@ -2,19 +2,23 @@
 
 #### 教学视频
 
-@[bilibili](BV1dS421N7du)
+<CardGrid>
 
-::: tip
+::: tip 写在前面
 如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
 :::
 
+@[bilibili](BV1dS421N7du)
+
+</CardGrid>
+
 ---
 
-在正式开始学习 CMake 之前，需要清楚 CMake 文件一般在项目中是如何分布的，只有清楚各个文件是如何分布的，才能正确且合理的书写`CMakeLists.txt`文件。
+在正式开始学习 CMake 之前，需要清楚 CMake 文件一般在项目中是如何分布的，只有清楚各个文件是如何分布的，才能正确且合理的书写 `CMakeLists.txt` 文件。
 
 ## 1. 按模块分层的 CMakeLists.txt
 
-一般来说，自己在使用 CMake 的时候，如果项目不大，往往都喜欢仅使用一个`CMakeLists.txt`来管理所有的属性配置。但随着项目越做越大，一个`CMakeLists.txt`在可读性、可维护性上都会有所降低。为此需要对每个特定的模块编写`CMakeLists.txt`。可以参考 OpenCV 的`CMakeLists.txt`布局。
+一般来说，自己在使用 CMake 的时候，如果项目不大，往往都喜欢仅使用一个 `CMakeLists.txt` 来管理所有的属性配置。但随着项目越做越大，一个 `CMakeLists.txt` 在可读性、可维护性上都会有所降低。为此需要对每个特定的模块编写 `CMakeLists.txt`。可以参考 OpenCV 的 `CMakeLists.txt` 布局。
 
 ```txt
 .
@@ -64,16 +68,21 @@
 
 ## 2. 其余 CMake 文件
 
-CMake 中除了解析 CMakeLists.txt 文件，还允许解析扩展名为 cmake 的文件。一般有两种操作可以对这类文件进行访问，分别是
+CMake 中除了解析 CMakeLists.txt 文件，还允许解析扩展名为 `.cmake` 的文件。一般有两种操作可以对这类文件进行访问，分别是
 
 1. `find_package()`，用于发现第三方依赖库
-2. `include()`，用于包含本地的或CMake标准中提供的`*.cmake`文件，一般这类文件会提供一系列宏或函数来辅助我们完成建构档的生成。
+2. `include()`，用于包含本地的或 CMake 标准中提供的 `*.cmake` 文件，一般这类文件会提供一系列宏或函数来辅助我们完成建构档的生成。
 
 其中第一种方案会在[【08】find_package 详解](08.md)中介绍。
 
-### 2.1 *.cmake 文件
+### 2.1 `*.cmake` 文件
 
-OpenCV 中，自定义的`*.cmake`文件全部存放在`<opencv-path>/cmake`文件夹下，常见的名称有Findxxx.cmake、OpenCVxxx.cmake。第一种是本地项目中用于`find_package()`的，例如 FindONNX.cmake 等文件。第二种则是添加了各种各样的能够减少重复操作的宏与函数，`ocv_add_module()`就是其中之一，他被定义在`OpenCVModule.cmake`中，这种一般需要执行`include()`操作，例如：
+OpenCV 中，自定义的`*.cmake`文件全部存放在`<opencv-path>/cmake`文件夹下，常见的名称有
+
+- `Findxxx.cmake`
+- `OpenCVxxx.cmake`
+
+第一种是本地项目中用于 `find_package()` 的，例如 FindONNX.cmake 等文件。第二种则是添加了各种各样的能够减少重复操作的宏与函数，`ocv_add_module()` 就是其中之一，他被定义在 `OpenCVModule.cmake` 中，这种一般需要执行 `include()` 操作，例如：
 
 ```cmake
 # 定义于 <opencv-path>/CMakeLists.txt 中的内容
@@ -98,7 +107,7 @@ if(WITH_WEBNN)
 endif()
 ```
 
-### 2.2 *.in 文件
+### 2.2 `*.in` 文件
 
 `*.in` 模板文件一般是用于在 cmake 执行阶段（准确来说，应该是配置阶段）将其嵌入的 CMake 变量、列表展开，并生成目标文件的过程中的。这一步通常是由 `configure_file()` 完成，会在[【06】变量参与 C++ 的编译](06.md) 中进行介绍。`*.in` 的后缀是约定俗成的，当然也可以使用其他形式的后缀。
 
@@ -111,7 +120,7 @@ cmake ..
 的时候将模板文件转换为具体的文件。另外，在
 
 ```bash
-sudo cmake --install .
+cmake --install .
 ```
 
 的时候会将生成的 `OpenCVConfig.cmake` 等一系列文件安装至目标路径下，而 `OpenCVConfig.cmake` 文件的产生，就需要 `<opencv-path>/cmake/template` 文件夹下的 `OpenCVConfig.cmake.in` 文件。
