--- a/docs/tutorial/cmake/03.md
+++ b/docs/tutorial/cmake/03.md
@@ -2,16 +2,16 @@
 
 #### 教学视频
 
+::: tip 写在前面
+如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
+:::
+
 <CardGrid>
 
 @[bilibili](BV1E6421g71z)
 @[bilibili](BV1px4y1D7d2)
 
 </CardGrid>
-
-::: tip
-如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
-:::
 
 ---
 
@@ -170,19 +170,13 @@ set(OPENCV_MODULES_BUILD "" CACHE INTERNAL "List of OpenCV modules included into
 
 #### 4.1.3 官网介绍
 
-- `BOOL`：`ON/OFF` 值。`cmake-gui` 会提供一个复选框；
+- `BOOL`：`ON/OFF` 值。`cmake-gui` 会提供一个形如<img src="/images/cmake/03-bool-var.jpg" alt="03-bool-var" width="60" style="vertical-align: middle;">的复选框；
 
-  ![20240213-003326](/images/cmake/20240213-003326.jpg)
-
-- `FILEPATH`：磁盘上文件的路径。`cmake-gui` 会提供一个文件对话框；
-
-  ![20240213-003348](/images/cmake/20240213-003348.jpg)
+- `FILEPATH`：磁盘上文件的路径。`cmake-gui` 会提供一个形如<img src="/images/cmake/03-filepath-var.jpg" alt="03-filepath-var" width="80" style="vertical-align: middle;">的文件对话框；
 
 - `PATH`：磁盘上目录的路径。`cmake-gui` 会提供一个文件对话框；
 
-- `STRING`：一行文字。`cmake-gui` 会提供文本字段，如果设置了 `STRINGS` 属性也可以提供下拉选项；
-
-  ![20240213-003339](/images/cmake/20240213-003339.jpg)
+- `STRING`：一行文字。`cmake-gui` 会提供形如<img src="/images/cmake/03-string-var.jpg" alt="03-string-var" width="50" style="vertical-align: middle;">的文本字段，如果设置了 `STRINGS` 属性也可以提供下拉选项；
 
 - `INTERNAL`：一行文字。`cmake-gui` 会不显示该类型的变量，因此在使用此类型时意味着 `FORCE`
 
