--- a/docs/tutorial/cmake/06.md
+++ b/docs/tutorial/cmake/06.md
@@ -2,16 +2,16 @@
 
 #### 教学视频
 
+::: tip 写在前面
+如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
+:::
+
 <CardGrid>
 
 @[bilibili](BV11w4m1R7S5)
 @[bilibili](BV1ar42187rt)
 
 </CardGrid>
-
-::: tip
-如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
-:::
 
 ---
 
