--- a/docs/tutorial/cmake/08.md
+++ b/docs/tutorial/cmake/08.md
@@ -2,11 +2,15 @@
 
 #### 教学视频
 
-@[bilibili](BV1YC411L7cK)
+<CardGrid>
 
-::: tip
+::: tip 写在前面
 如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
 :::
+
+@[bilibili](BV1YC411L7cK)
+
+</CardGrid>
 
 ---
 
@@ -29,7 +33,7 @@ target_link_libraries(
 )
 ```
 
-这是一段再熟悉不过的 CMakeLists.txt 代码，我们通过`find_package`命令寻找到了OpenCV库，并获得了其中的导入目标列表。我们可以使用`message`验证一下`OpenCV_LIBS`包含的内容
+这是一段再熟悉不过的 CMakeLists.txt 代码，我们通过 `find_package` 命令寻找到了OpenCV库，并获得了其中的导入目标列表。我们可以使用 `message` 验证一下 `OpenCV_LIBS` 包含的内容
 
 ```cmake
 foreach(m ${OpenCV_LIBS})
@@ -56,7 +60,7 @@ endforeach()
 
 ### 3.1 用法
 
-**Module** 模式下`find_package`的参数为：
+**Module** 模式下 `find_package` 的参数为：
 
 ```cmake
 find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
@@ -91,8 +95,8 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 **Config** 模式下 `find_package` 的完整命令参数如下，不必全部了解。
 
 - 相比于 **Module** 模式，**Config** 模式的参数更多，也更复杂，但实际在使用过程中我们并不会用到所有参数，大部分参数都是可选的，我们只需要掌握基本的参数用法即可。
-- 其中具体查找库并给`XXX_INCLUDE_DIRS`和`XXX_LIBS`两个变量赋值的操作由`XXXConfig.cmake`模块完成。
-- 两种模式看起来似乎差不多，不过 CMake 默认采取 **Module** 模式，如果 **Module** 模式未找到库，才会采取 **Config** 模式。总之，**Config** 模式是一个备选策略。通常，库安装时会拷贝一份`XXXConfig.cmake`到系统目录中，因此在没有显式指定搜索路径时也可以顺利找到。
+- 其中具体查找库并给 `XXX_INCLUDE_DIRS` 和 `XXX_LIBS` 两个变量赋值的操作由 `XXXConfig.cmake` 模块完成。
+- 两种模式看起来似乎差不多，不过 CMake 默认采取 **Module** 模式，如果 **Module** 模式未找到库，才会采取 **Config** 模式。总之，**Config** 模式是一个备选策略。通常，库安装时会拷贝一份 `XXXConfig.cmake` 到系统目录中，因此在没有显式指定搜索路径时也可以顺利找到。
 
 ### 4.2 文件搜索过程
 
@@ -143,7 +147,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 
 **CMAKE_SYSTEM_PREFIX_PATH 等变量**
 
-- 我们在安装 OpenCV 的时候，可以在`cmake-gui`中修改`CMAKE_INSTALL_PREFIX`变量的内容，把 OpenCV 安装在`/opt/opencv`下，我们在使用`find_package`时也不需要指名路径，说明除了上面的一些变量之外，还存在另外一系列路径。这里列出最重要的一个变量：`CMAKE_SYSTEM_PREFIX_PATH`
+- 我们在安装 OpenCV 的时候，可以在 `cmake-gui` 中修改 `CMAKE_INSTALL_PREFIX` 变量的内容，把 OpenCV 安装在 `/opt/opencv` 下，我们在使用 `find_package` 时也不需要指名路径，说明除了上面的一些变量之外，还存在另外一系列路径。这里列出最重要的一个变量：`CMAKE_SYSTEM_PREFIX_PATH`
 - 我们可以在一个 CMakeLists.txt 文件下，输入以下内容：
 
   ```cmake
@@ -165,7 +169,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
   -- /opt
   ```
 
-- 留意该变量最后一点包含的内容，这正是我们可以把第三方库安装在`/opt`的原因。事实上，很多软件包都是安装在`/opt`下的，譬如 ROS、BaiduDisk、ToDesk、Qt Creator……
+- 留意该变量最后一点包含的内容，这正是我们可以把第三方库安装在 `/opt` 的原因。事实上，很多软件包都是默认安装在 `/opt` 下的，譬如 ROS。
 
 ::: tip 补充
 相关包含的内容还有非常之多，有兴趣的可以阅读官网和源码，这里给出官网和源码 GitLab 地址：
@@ -175,7 +179,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 
 ### 4.3 根目录路径详解
 
-上述提及到的根目录路径，在指明这些内容时，CMake 会首先检查这些根目录路径下是否有名为`<PackageName>Config.cmake`或`<lower-case-package-name>-config.cmake`的模块文件，如果没有，CMake 会继续检查或匹配这些根目录下的以下路径：
+上述提及到的根目录路径，在指明这些内容时，CMake 会首先检查这些根目录路径下是否有名为 `<PackageName>Config.cmake` 或 `<lower-case-package-name>-config.cmake` 的模块文件，如果没有，CMake 会继续检查或匹配这些根目录下的以下路径：
 
 ```txt
 <prefix>/(lib/<arch>|lib|share)/cmake/<name>*/
@@ -183,14 +187,11 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 <prefix>/(lib/<arch>|lib|share)/<name>*/(cmake|CMake)/
 ```
 
-其中为`arch`系统架构名，如 Ubuntu 下一般为：`x86_64-linux-gnu`，整个`(lib/<arch>|lib|share)`为可选路径，例如 OpenCV 库而言会检查或匹配以下内容：
+其中为 `arch` 系统架构名，如 Ubuntu 下一般为：`x86_64-linux-gnu`，整个 `(lib/<arch>|lib|share)` 为可选路径，例如 OpenCV 库而言会检查或匹配以下内容：
 
 1. `<prefix>/lib/x86_64-linux-gnu/opencv4/`
-
 2. `<prefix>/lib/cmake/opencv4/`
-
 3. `<prefix>/share/opencv4/`
-
 4. ……
 
 ::: warning
@@ -203,7 +204,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 
 ### 5.1 案例
 
-假设某家相机厂商的 SDK 提供了以下内容，假设将其放在了`/opt/camera`文件夹下，请创建一个`CameraDemo`项目，并设计一个`FindCamera.cmake`文件供本项目中的其余目标包含，使其能够链接至本相机的 SDK。
+假设某家相机厂商的 SDK 提供了以下内容，假设将其放在了 `/opt/camera` 文件夹下，请创建一个 `CameraDemo` 项目，并设计一个 `FindCamera.cmake` 文件供本项目中的其余目标包含，使其能够链接至本相机的 SDK。
 
 ```txt
 .
@@ -235,7 +236,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 
 - `FindCamera.cmake`：其他库直接包含、链接 SDK 提供的库肯定是不行的，需要事先找到 SDK 的路径，此文件就是为了提前让整个 CMake 工程找到此 SDK。
 
-- 项目根目录的`CMakeLists.txt`：框架整体配置，包括项目、编译属性、可执行程序的配置。这里`main.cpp`直接用到了 SDK 的内容，通过以下语句进行链接
+- 项目根目录的 `CMakeLists.txt`：框架整体配置，包括项目、编译属性、可执行程序的配置。这里 `main.cpp` 直接用到了 SDK 的内容，通过以下语句进行链接
 
   ```cmake
   target_link_libraries(
@@ -250,8 +251,8 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 
 ① 主要目的
 
-1. 设置`CMAKE_MODULE_PATH`模块模式的工作路径
-2. 解析`FindCamera.cmake`，并找到 camera 对应的库
+1. 设置 `CMAKE_MODULE_PATH` 模块模式的工作路径
+2. 解析 `FindCamera.cmake`，并找到 camera 对应的库
 3. 创建可执行程序目标并链接
 
 ② 示例代码
@@ -259,7 +260,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 ```cmake
 cmake_minimum_required(VERSION 3.10)
 project(CameraDemo)
-# 2.2.2 提及过，下一句是让 CMake 工程能够找到 FindCamera.cmake
+# 本篇 2.2.2 节提及过，下一句是让 CMake 工程能够找到 FindCamera.cmake
 list(CMAKE_MODULE_PATH APPEND "${CMAKE_SOURCE_DIR}/cmake")
 
 # 找到 SDK
