--- a/docs/tutorial/cmake/04.md
+++ b/docs/tutorial/cmake/04.md
@@ -2,11 +2,15 @@
 
 #### 教学视频
 
-@[bilibili](BV174421w7xR)
+<CardGrid>
 
-::: tip
+::: tip 写在前面
 如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
 :::
+
+@[bilibili](BV174421w7xR)
+
+</CardGrid>
 
 ---
 
@@ -83,7 +87,7 @@ endif()
   if(COMMAND ocv_get_module_external_sources)
   ```
 
-- `DEFINED`：如果给定的变量（普通变量、缓存变量或系统环境变量）存在，则返回真。格式为：`DEFINED xxx`，系统环境变量前要加`ENV`，即`DEFINED ENV xxx`。示例如下：
+- `DEFINED`：如果给定的变量（普通变量、缓存变量或系统环境变量）存在，则返回真。格式为：`DEFINED xxx`，系统环境变量前要加 `ENV`，即 `DEFINED ENV xxx`。示例如下：
 
   ```cmake
   # 定义于 <opencv-path>/cmake/OpenCVModule.cmake 中的内容
@@ -120,7 +124,7 @@ if(BUILD_opencv_world AND m STREQUAL "opencv_world"
 
 逻辑操作符的结合优先级：
 
-`NOT`>`AND`>`OR`
+`NOT` > `AND` > `OR`
 
 ::: tip
 运算符结合顺序为：一元运算符 > 二元运算符 > 逻辑运算符
@@ -128,7 +132,7 @@ if(BUILD_opencv_world AND m STREQUAL "opencv_world"
 
 ## 3. 循环控制：foreach
 
-这里介绍最常用的`foreach`，`while`这里不做介绍
+这里介绍最常用的 `foreach`，`while` 这里不做介绍
 
 ### 3.1 用法
 
@@ -167,7 +171,7 @@ endforeach()
 
 - Example 1
 
-  1. `${subdirs}` 不可写成 `"${subdirs}"`，我们假设此处 `${subdirs}` 内容有：`a`、`b`、`c`，那么遍历的时候 `subdir` 则分别指代`a`、`b`、`c`。而如果写成 `"${subdirs}"`，展开则表示 `"a;b;c"`，那么 `subdir` 则指代 `a;b;c` 这个变量。
+  1. `${subdirs}` 不可写成 `"${subdirs}"`，我们假设此处 `${subdirs}` 内容有：`a`、`b`、`c`，那么遍历的时候 `subdir` 则分别指代 `a`、`b`、`c`。而如果写成 `"${subdirs}"`，展开则表示 `"a;b;c"`，那么 `subdir` 则指代 `a;b;c` 这个变量。
 
   2. `subdir` 是个普通变量，因此在访问（取值）时也需要用 `${}` 的写法。
 
@@ -175,14 +179,14 @@ endforeach()
 
   1. 共有 4 个待遍历的列表，遍历则会将这 4 个列表中的所有内容依次访问。
 
-  2. `mod`为一个变量，不例外的也需要用`${}`来访问。同时我们还能看到这种写法：
+  2. `mod` 为一个变量，不例外的也需要用 `${}` 来访问。同时我们还能看到这种写法：
      ```cmake
      unset(OPENCV_MODULE_${mod}_DEPS CACHE)
      ```
      `${mod}` 用在了一个变量的中间，假设此时 `${mod}` 指的是 `aa`，那么这个变量则表示为：`OPENCV_MODULE_aa_DEPS`
 
 ::: warning
-条件控制结束标志`endif()`和循环控制结束标志`endforeach()`括号中的内容可以不写，一旦写，就必须跟`if()`和`foreach()`括号中的内容一致
+条件控制结束标志 `endif()` 和循环控制结束标志 `endforeach()` 括号中的内容可以不写，一旦写，就必须跟 `if()` 和 `foreach()` 括号中的内容一致
 :::
 
 ### 3.2 其他写法
@@ -205,7 +209,7 @@ endforeach()
 
 ## 4. 示例
 
-如果我们想遍历当前目录下的所有文件夹要怎么办？在终端中我们可以使用`ls`来列出当前路径下的所有内容，包括文件夹，当然也包括了文件，在 CMake 中我们要如何调用命令行呢？
+如果我们想遍历当前目录下的所有文件夹要怎么办？在终端中我们可以使用 `ls` 来列出当前路径下的所有内容，包括文件夹，当然也包括了文件，在 CMake 中我们要如何调用命令行呢？
 
 ### 4.1 列出文件与文件夹
 
@@ -213,7 +217,7 @@ endforeach()
 
 先列出官网给出的命令原型：
 
-```cmake
+```cmake :collapsed-lines=8
 execute_process(COMMAND <cmd1> [<arguments>]
                 [COMMAND <cmd2> [<arguments>]]...
                 [WORKING_DIRECTORY <directory>]
@@ -239,19 +243,12 @@ execute_process(COMMAND <cmd1> [<arguments>]
 这里列出常用的几个选项：&#x20;
 
 - `COMMAND`
-
   - 用于指定一个子进程命令行。
-
-  - CMake直接使用操作系统 API 执行子进程。所有参数都被逐字传递给子进程。没有使用中间shell，所以像`>`这样的shell操作符被视为普通参数。
-
-  - 如果需要连续执行多个命令，请使用多个`execute_process()`调用，并使用单个`COMMAND`参数。
-
+  - CMake 直接使用操作系统 API 执行子进程。所有参数都被逐字传递给子进程。没有使用中间 Shell，所以像 `>` 这样的 Shell 操作符被视为普通参数。
+  - 如果需要连续执行多个命令，请使用多个 `execute_process()` 调用，并使用单个 `COMMAND` 参数。
 - `OUTPUT_VARIABLE`
-
   - 变量名将分别用标准输出管道的内容设置。
-
 - `ERROR_VARIABLE`
-
   - 变量名将分别用标准错误管道的内容设置。
 
 因此，列出当前目录下所有文件夹，就可以写为
@@ -260,7 +257,7 @@ execute_process(COMMAND <cmd1> [<arguments>]
 execute_process(COMMAND ls ${CMAKE_CURRENT_LIST_DIR} OUTPUT_VARIABLE subs)
 ```
 
-其中，输出的变量为`subs`，这个操作仅能在支持`ls`命令的平台上使用，一般是 Linux。
+其中，输出的变量为 `subs`，这个操作仅能在支持 `ls` 命令的终端上使用，例如 `Shell`、`Windows PowerShell` 等。
 
 #### 4.1.2 使用 file 操作
 
