--- a/docs/tutorial/cmake/05.md
+++ b/docs/tutorial/cmake/05.md
@@ -2,6 +2,10 @@
 
 #### 教学视频
 
+::: tip 写在前面
+如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
+:::
+
 <CardGrid>
 
 @[bilibili](BV13C411W7m2)
@@ -9,9 +13,6 @@
 
 </CardGrid>
 
-::: tip
-如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
-:::
 ---
 
 ## 1. 前期准备
