--- a/docs/tutorial/cmake/10.md
+++ b/docs/tutorial/cmake/10.md
@@ -2,11 +2,15 @@
 
 #### 教学视频
 
-@[bilibili](BV1Ep421Q7Rt)
+<CardGrid>
 
-::: tip
+::: tip 写在前面
 如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
 :::
+
+@[bilibili](BV1Ep421Q7Rt)
+
+</CardGrid>
 
 ---
 
