--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -18,7 +18,7 @@
 现计划开发一个专为 Linux 平台设计的视觉处理库 `visionlib` 及示例程序 `vl_demo`，库在从源码编译安装的过程中需要实现以下功能：
 
 1. 需要支持 C++17 标准；
-2. 强制依赖 OpenCV 4 及以上版本，并用到其中的 `core`、`imgproc`、`highgui` 模块；
+2. 强制依赖 OpenCV 4 及以上版本，并用到其中的 `core`、`imgproc`、`highgui` 模块，分别对应 `opencv_core`、`opencv_imgproc`、`opencv_highgui` 这 3 个 CMake 目标；
 3. 默认以静态库的形式构建 `visionlib`，但允许用户通过 CMake 选项设置构建为动态库；
 4. 库包含了 `vl_a`、`vl_b`、`vl_c` 和 `vl_d` 共 4 个模块，分别对应 `A`、`B`、`C` 和 `D` 4 个文件夹，其中 `vl_d` 模块默认==不==参与构建，其余模块均参与构建，但是允许用户通过 CMake 选项设置任一模块的构建；
 5. 6 个模块之间存在依赖关系，使用 `->` 表示依赖关系，如 `vl_a -> vl_c` 表示 `vl_c` 依赖 `vl_a`
@@ -36,7 +36,7 @@
 
 ### 1.2 要求与文件结构
 
-该项目中所有的 CMake 目标必须均以 `vl_` 开头，例如文件夹 `a` 对应的目标是 `vl_a`，该项目的文件结构如下
+该项目中所有的 CMake 目标必须均以 `vl_` 开头，例如文件夹 `A` 对应的目标是 `vl_a`，该项目的文件结构如下
 
 ``` :collapsed-lines
 .
@@ -760,6 +760,7 @@ set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
 ├── CMakeLists.txt              (New)
 ├── src
 │   ├── ec_robot.cpp
+│   ├── ec_robot.hpp
 │   └── main.cpp
 └── platform
     └── toolchain-aarch64.cmake (New)
@@ -786,7 +787,7 @@ target_link_libraries(ec_robot
 )
 ```
 
-@tab cmake/toolchain-aarch64.cmake
+@tab platform/toolchain-aarch64.cmake
 
 ```cmake
 set(CMAKE_SYSTEM_NAME Linux)
@@ -811,7 +812,7 @@ set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
 
 ```shell
 mkdir build
-cmake -B build -S . -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain-aarch64.cmake
+cmake -B build -S . -DCMAKE_TOOLCHAIN_FILE=platform/toolchain-aarch64.cmake
 cmake --build build
 ```
 
@@ -897,9 +898,9 @@ cmake --build build
 - `modules/CMakelists.txt` —— 项目的模块列表
 - `samples/CMakeLists.txt` —— 示例程序的 CMake 配置文件
 - `CMakeLists.txt` —— 项目根目录的 CMake 配置文件
-- `cmake/numoptInstall.cmake` —— 项目的安装路径配置文件
-- `cmake/templates/numoptConfig.cmake.in` —— 项目的 CMake 配置文件模板
-- `cmake/templates/cmake_uninstall.cmake.in` —— 项目的卸载配置文件模板
+- `cmake/numoptInstall.cmake` —— 与项目安装路径相关的配置文件
+- `cmake/templates/numoptConfig.cmake.in` —— 项目的 CMake 配置文件的模板文件
+- `cmake/templates/cmake_uninstall.cmake.in` —— 自定义卸载目标的模板文件
 
 共 7 个文件，如下文件结构所示
 
@@ -1080,7 +1081,7 @@ endif()
 
 #### 4.2.2 模块配置
 
-`modules` 目录下的 `CMakeLists.txt` 文件
+`modules` 目录下的 `CMakeLists.txt` 和各个模块的 `CMakeLists.txt` 文件如下：
 
 ::: code-tabs
 
@@ -1391,8 +1392,6 @@ add_library(opt_obj INTERFACE IMPORTED)
 
 ## 写在后面
 
-::: tip
-
 有关 CMake 项目实战的内容可以参考 [RMVL](https://github.com/cv-rmvl/rmvl.git) 项目的 CMake 框架，本文涉及到的
 
 - 常规非跨平复杂项目
@@ -1401,5 +1400,3 @@ add_library(opt_obj INTERFACE IMPORTED)
 - 跨平台
 
 对应的 CMake 配置，都能在 RMVL 项目中找到。
-
-:::
