(bugfix) 修正 EXPORT 的错误写法

--- a/docs/tutorial/cmake/10.md
+++ b/docs/tutorial/cmake/10.md
@@ -83,7 +83,16 @@ install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html
 
 ### 2.3 目标安装
 
-即 `install(TARGETS)`
+即 `install(TARGETS)`，先给出目标安装的签名
+
+```cmake
+install(TARGETS <target>... [EXPORT <export-name>]
+        [RUNTIME_DEPENDENCIES <arg>...|RUNTIME_DEPENDENCY_SET <set-name>]
+        [<artifact-option>...]
+        [<artifact-kind> <artifact-option>...]...
+        [INCLUDES DESTINATION [<dir> ...]]
+        )
+```
 
 用法与文件、文件夹安装基本一致，但由于 CMake 中的目标不仅仅包含动态、静态库，也有可执行文件，也有接口库、导入库等伪目标，因此 CMake 目标安装是个广泛的概念，接口上也能适配多种目标的安装，例如以下命令
 
@@ -119,21 +128,44 @@ install(
 ```cmake
 install(
   TARGETS my_target
+  EXPORT MyModules
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   RUNTIME DESTINATION bin
+)
+```
+
+::: warning
+`EXPORT` 必须在 `TARGETS` 之后，`[<artifact-option>...]` 之前，如[签名](#_2-3-目标安装)的要求。也就是说，如果写成
+
+```cmake
+install(
+  EXPORT MyModules
+  TARGETS my_target
+)
+```
+
+或者
+
+```cmake
+install(
+  TARGETS my_target
+  LIBRARY DESTINATION lib
   EXPORT MyModules
 )
 ```
+
+都是错误的写法，在 CMake 配置期间会报错。
+:::
 
 这里的 `MyModules` 就是导出目标名，并且该导出目标包含了关于 `my_target` 的所有信息，包括头文件路径、库文件路径等内容。如果我在此之上继续写入
 
 ```cmake
 install(
   TARGETS my_target_2
+  EXPORT MyModules
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
-  EXPORT MyModules
 )
 ```
 
