--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -89,6 +89,7 @@
 - `CMakeLists.txt` —— 项目根目录的 CMake 配置文件
 - `cmake/VisionLibInstall.cmake` —— 项目的安装路径配置文件
 - `cmake/VisionLibModule.cmake` —— 项目的 CMake 函数库，主要涉及到目标的便捷创建
+- `cmake/templates/VisionLibConfig.cmake.in` —— 项目在 `find_package` 时需要的配置文件模板
 - `modules/CMakeLists.txt` —— 项目的模块列表
 - `modules/A/CMakeLists.txt` —— 模块 A 的 CMake 配置文件
 - `modules/B/CMakeLists.txt` —— 模块 B 的 CMake 配置文件
@@ -139,7 +140,7 @@ file(RELATIVE_PATH VL_INSTALL_RELATIVE_PATH
   "${CMAKE_INSTALL_PREFIX}/${VL_CFG_INSTALL_PATH}/" ${CMAKE_INSTALL_PREFIX})
 
 configure_file(
-  cmake/VisionLibConfig.cmake.in
+  cmake/templates/VisionLibConfig.cmake.in
   "${CMAKE_CURRENT_BINARY_DIR}/VisionLibConfig.cmake"
   @ONLY
 )
@@ -244,9 +245,9 @@ macro(vl_add_module _name)
     )
     install(
       TARGETS ${module_name}
-      LIBRARY DESTINATION lib
-      ARCHIVE DESTINATION lib
       EXPORT VisionLibTargets
+      LIBRARY DESTINATION ${VL_LIB_INSTALL_PATH}
+      ARCHIVE DESTINATION ${VL_LIB_INSTALL_PATH}
     )
     set(VL_LIB_COMPONENTS ${VL_LIB_COMPONENTS} "${module_name}" CACHE INTERNAL "VisionLib components")
   endif()
@@ -643,11 +644,11 @@ target_link_libraries(opcua
 
 install(
   TARGETS opcua
+  EXPORT opcuaModules
   LIBRARY DESTINATION ${OPCUA_BIN_INSTALL_PATH}
   ARCHIVE DESTINATION ${OPCUA_LIB_INSTALL_PATH}
   RUNTIME DESTINATION ${OPCUA_BIN_INSTALL_PATH}
   INCLUDES DESTINATION ${OPCUA_INC_INSTALL_PATH}
-  EXPORT opcuaModules
 )
 ```
 
@@ -981,9 +982,9 @@ endif()
 #   导出、安装
 # ----------------------------------------------------------------------------
 install(
-  EXPORT numoptTargets
+  EXPORT numoptModules
   DESTINATION ${NUMOPT_CFG_INSTALL_PATH}
-  FILE numoptTargets.cmake
+  FILE numoptModules.cmake
 )
 
 file(RELATIVE_PATH NUMOPT_INSTALL_RELATIVE_PATH 
@@ -1227,7 +1228,7 @@ set(numopt_INCLUDE_DIRS "${NUMOPT_INSTALL_PATH}/@NUMOPT_INC_INSTALL_PATH@")
 set(numopt_LIBS @NUMOPT_LIB_COMPONENTS@)
 
 if(NOT TARGET core)
-  include("${NUMOPT_CONFIG_PATH}/numoptTargets.cmake")
+  include("${NUMOPT_CONFIG_PATH}/numoptModules.cmake")
 endif()
 
 # ----------------------------------------------------------------------------
@@ -1373,7 +1374,7 @@ install(TARGETS opt_obj
 
 :::
 
-来安装对象库等效于安装一个接口库，安装接口库的效果可以参考[【10】项目的导出与安装 - 思考](10.md#思考)中的第 2 个问题，因此在导出配置文件中也具有相应的信息，例如 `numoptTargets.cmake` 导出配置文件中会包含大致如下内容
+来安装对象库等效于安装一个接口库，安装接口库的效果可以参考[【10】项目的导出与安装 - 思考](10.md#思考)中的第 2 个问题，因此在导出配置文件中也具有相应的信息，例如 `numoptModules.cmake` 导出配置文件中会包含大致如下内容
 
 ```cmake
 # Create imported target core_obj
@@ -1387,7 +1388,7 @@ add_library(opt_obj INTERFACE IMPORTED)
 ```
 
 ::: warning
-如果希望在 `numoptTargets.cmake` 导出配置文件中只包含一个 `numopt_world` 目标而不包含 `core_obj` 等由对象库导出生成的接口库，可以使用第一种方案。
+如果希望在 `numoptModules.cmake` 导出配置文件中只包含一个 `numopt_world` 目标而不包含 `core_obj` 等由对象库导出生成的接口库，可以使用第一种方案。
 :::
 
 ## 写在后面
