(refactor) 更新第 11 期 CMake 依赖相关贴图

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -21,13 +21,15 @@
 2. 强制依赖 OpenCV 4 及以上版本，并用到其中的 `core`、`imgproc`、`highgui` 模块，分别对应 `opencv_core`、`opencv_imgproc`、`opencv_highgui` 这 3 个 CMake 目标；
 3. 默认以静态库的形式构建 `visionlib`，但允许用户通过 CMake 选项设置构建为动态库；
 4. 库包含了 `vl_a`、`vl_b`、`vl_c` 和 `vl_d` 共 4 个模块，分别对应 `A`、`B`、`C` 和 `D` 4 个文件夹，其中 `vl_d` 模块默认==不==参与构建，其余模块均参与构建，但是允许用户通过 CMake 选项设置任一模块的构建；
-5. 6 个模块之间存在依赖关系，使用 `->` 表示依赖关系，如 `vl_a -> vl_c` 表示 `vl_c` 依赖 `vl_a`
-   - `opencv_core -> vl_c`
-   - `vl_a -> vl_c -> vl_d`
-   - `opencv_imgproc -> vl_b -> vl_d`
-6. 项目包含了一个示例程序 `vl_demo`
-   - `vl_d -> vl_demo`
-   - `opencv_highgui -> vl_demo`
+5. 项目包含了一个示例程序 `vl_demo`
+6. 这几个模块和示例程序之间存在依赖关系，使用 → 表示依赖关系，如 <img src="/images/cmake/11-normal-deps-example.png" alt="11-normal-deps-example" width="60" style="vertical-align: middle;"> 表示 `vl_c` 依赖 `vl_a`
+   
+   <center>
+     <img src="/images/cmake/11-normal-deps.png" alt="11-normal-deps" width="500">
+
+     **图 1-1：依赖关系图**
+   </center>
+
 7. 项目的安装目录为 `/usr/local`，其中
    - 示例程序安装到 `/usr/local/bin`
    - 头文件安装到 `/usr/local/include`
