(bugfix) 修正第 11 期第一部分分析中的文件数量

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -99,7 +99,7 @@
 - `modules/D/CMakeLists.txt` —— 模块 D 的 CMake 配置文件
 - `samples/CMakeLists.txt` —— 示例程序的 CMake 配置文件
 
-共 8 个文件。
+共 10 个文件。
 
 #### 1.4.1 项目配置
 
@@ -303,7 +303,7 @@ endmacro()
 
 ::: code-tabs
 
-@tab (modules).txt
+@tab `modules`
 
 ```cmake
 set(cur_path "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -322,13 +322,13 @@ endforeach()
 # add_subdirectory(D)
 ```
 
-@tab (modules/A).txt
+@tab `modules/A`
 
 ```cmake
 vl_add_module(a)
 ```
 
-@tab (modules/B).txt
+@tab `modules/B`
 
 ```cmake
 vl_add_module(b
@@ -337,7 +337,7 @@ vl_add_module(b
 )
 ```
 
-@tab (modules/C).txt
+@tab `modules/C`
 
 ```cmake
 vl_add_module(c
@@ -346,7 +346,7 @@ vl_add_module(c
 )
 ```
 
-@tab (modules/D).txt
+@tab `modules/D`
 
 ```cmake
 vl_update_build(d OFF)
